<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    android:id="@+id/services_card_view"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:background="#ffffff"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="18dp"
        android:layout_marginLeft="11dp"
        android:layout_marginStart="11dp">

        <ImageView
            android:id="@+id/service_request_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_service_ac_icon"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="20dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/service_request_sr_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#333f48"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:text="@string/sample_sr_id"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textSize="14sp"
                    android:textColor="#929ba2"
                    android:text="@string/category_title_service_request"
                    android:layout_marginStart="10dp" />
                <TextView
                    android:id="@+id/services_category_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:textStyle="bold"
                    android:textColor="#333f48"
                    android:textSize="14sp"
                    android:text="@string/sample_services_category_type"
                    android:layout_marginStart="2dp" />

            </LinearLayout>

            <TextView
                android:id="@+id/services_technician_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#585d63"
                android:textSize="15sp"
                android:text="@string/tech_status_sample"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="#f4811f"
                android:text="@string/sample_schedule_service_time"
                />
        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>