<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:src="@drawable/logo_login"

        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
      android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:padding="10dp"
       >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/helveticaneue_bold"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:text="@string/login"
            android:textColor="#585d63"
            android:textSize="18sp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout_id"
            android:layout_width="264dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColorHint="#cbcfd6">

            <EditText
                android:id="@+id/edit_text_email"
                android:inputType="text"
                android:fontFamily="@font/helveticaneue_medium"
                android:layout_width="264dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/registered_email_mobile_number"
                android:textSize="13sp" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/text_view_error_log_in"
            android:layout_marginTop="-15dp"
            android:layout_marginLeft="4dp"
            android:layout_width="264dp"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:visibility="invisible"
            android:fontFamily="@font/helveticaneue_medium"
            android:text="@string/error_message_here_sample_login"
            android:textColor="#da291c"
            android:textSize="10sp"
            android:layout_marginStart="4dp" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:padding="1dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_layout_pass"
                android:layout_width="264dp"
                android:layout_height="wrap_content"
                android:textColorHint="#cbcfd6">

                <EditText
                    android:id="@+id/edit_text_password"
                    android:inputType="textPassword"
                    android:layout_width="264dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/helveticaneue_medium"
                    android:hint="@string/password"
                    android:textSize="13sp" />
            </android.support.design.widget.TextInputLayout>

            <ImageView
                android:id="@+id/view_password_login"
                android:layout_width="24dp"
                android:onClick="ViewPassword"
                android:layout_height="24dp"
                android:layout_marginLeft="-30dp"
                android:layout_marginStart="-30dp"
                android:layout_marginTop="15dp"
                android:src="@drawable/ic_cancel_view_password" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:gravity="right"
            android:orientation="horizontal"
            android:padding="1dp">

            <TextView
                android:id="@+id/login_forgot_password"
                android:onClick="ForgotPassword"
                android:fontFamily="@font/helveticaneue_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textColor="#52a9f6"
                android:textSize="12sp" />

        </LinearLayout>

        <Button
            android:id="@+id/button_login"
            android:onClick="LoginAuthentication"
            android:layout_width="275dp"
            android:layout_height="45dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/helveticaneue_bold"
            android:background="#253746"
            android:text="@string/login_button"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/helveticaneue_medium"
            android:text="@string/or"
            android:textColor="#6f747a"
            android:textSize="12sp" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="1dp">

            <LinearLayout
                android:id="@+id/face_login_button"
                android:onClick="FBloginOnClick"
                android:layout_width="132dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/rectangle_login"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="12dp">

                <com.facebook.login.widget.LoginButton
                    android:id="@+id/login_fb_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone" />

                <ImageView
                    android:layout_width="26dp"
                    android:layout_height="26dp"
                    android:src="@drawable/fb_logo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:fontFamily="@font/helveticaneue_bold"
                    android:text="@string/facebook"
                    android:textColor="#475993"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/google_login_button"
                android:onClick="GoogleLogin"
                android:layout_width="132dp"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/rectangle_login"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="12dp">



                <ImageView
                    android:layout_width="26dp"
                    android:layout_height="26dp"
                    android:src="@drawable/g_logo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:fontFamily="@font/helveticaneue_bold"
                    android:text="@string/google"
                    android:textColor="#585d63"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>



    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/helveticaneue_medium"
            android:text="@string/don_t_have_an_account"
            android:textColor="#585d63"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/helveticaneue_medium"
            android:layout_marginLeft="6dp"
            android:layout_marginStart="6dp"
            android:text="@string/register_login_new"
            android:textColor="#52a9f6"
            android:textSize="12sp"
            android:onClick="NavRegister"/>
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_gravity="bottom"
        android:background="@drawable/footer_login"
        android:layout_height="80dp"
      />
        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>